chore: defines aggregated coverage report